...

  @override
  Widget build(BuildContext context) {
    final theme = Theme.of(context);

    return Scaffold(
      key: Key("dashboardScreen"),

      backgroundColor: theme.scaffoldBackgroundColor,
      appBar: AppBar(
        title: Text("Student Login", style: TextStyle(color: Colors.white)),
        backgroundColor: theme.appBarTheme.backgroundColor,
        centerTitle: true,
        actions: [
          IconButton(
            icon: Icon(
              Provider.of<ThemeProvider>(context).themeData.brightness == Brightness.dark
...
                        Icon(Icons.school, size: 60, color: Colors.deepPurple),
                        SizedBox(height: 10),
                        Text("Student Login",
                            style: TextStyle(fontSize: 22, fontWeight: FontWeight.bold, color: Colors.deepPurple)),
                        SizedBox(height: 20),

                        buildTextField("Email", emailController, isEmail: true),
                        buildTextField("Password", passwordController, isPassword: true),

                        SizedBox(height: 15),

                        GestureDetector(
                          onTap: loginStudent,
                          child: Container(
...
                              gradient: LinearGradient(colors: [Colors.deepPurple, Colors.purpleAccent]),
                              borderRadius: BorderRadius.circular(10),
                            ),
                            child: Center(
                              child: isLoading
                                  ? CircularProgressIndicator(color: Colors.white)
                                  : Text("Login",
                                  style: TextStyle(color: Colors.white, fontSize: 18, fontWeight: FontWeight.bold)),
                            ),
                          ),
                        ),

                        SizedBox(height: 10),
...
